--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
             </div>
         </div>
     </div>
-
+    <script scr="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script scr="static/js/data.js"></script>
+    <script scr="static/js/app.js"></script>
 
 </body>
 
