--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +8,17 @@
     <title> UFO Finder </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="Static/CSS/style.css">
 </head>
 
-<body>
+<body class="bg-dark">
     <div class="wrapper">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
         </nav>
     </div>
     <div class="jumbotron">
-        <h1> The Truth Is Out There</h1>
+        <h1 class="display-4">The Truth Is Out There</h1>
     </div>
     <div class="containter-fluid">
         <div class="row">
@@ -53,15 +53,17 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
-                <form>
+                <form class="bg-dark">
                     <p>Filter Search</p>
                 </form>
-                <ul class="list-group">
+                <ul class="list-group bg-dark">
+                    <li class="list-group-item bg-dark"></li>
+                        <label for="date">Enter Date</label>
+                        <input type="text" placeholder="1/10/2010" id="datetime" />
                     <li class="list-group-item"></li>
-                    <label for="date">Enter Date</label>
-                    <input type="text" placeholder="1/10/2010" id="datetime" />
-                    <li class="list-group-item"></li>
-                    <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                    <li>
+                    <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                    </li>
                 </ul>
             </div>
             <div class="col-md-9">
