--- a/index.html
+++ b/index.html
@@ -57,12 +57,25 @@
                     <p>Filter Search</p>
                 </form>
                 <ul class="list-group bg-dark">
-                    <li class="list-group-item bg-dark"></li>
+                    <li class="list-group-item bg-dark">
                         <label for="date">Enter Date</label>
-                        <input type="text" placeholder="1/10/2010" id="datetime" />
-                    <li class="list-group-item"></li>
-                    <li>
-                    <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                        <input type="text" placeholder="1/1/2010" id="datetime" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="date">Enter City</label>
+                        <input type="text" placeholder="benton" id="city"/>
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="date">Enter State</label>
+                        <input type="text" placeholder="ar" id="state"/>
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="date">Enter Country</label>
+                        <input type="text" placeholder="us" id="country"/>
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="date">Enter Shape</label>
+                        <input type="text" placeholder="circle" id="shape"/>
                     </li>
                 </ul>
             </div>
