help updating code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title> UFO Finder </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-    <link rel="stylesheet" href="Static/CSS/style.css">
+    <link rel="stylesheet" href="static/CSS/style.css">
 </head>
 
 <body class="bg-dark">
@@ -16,7 +16,6 @@
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
         </nav>
-    </div>
     <div class="jumbotron">
         <h1 class="display-4">The Truth Is Out There</h1>
     </div>
@@ -53,9 +52,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
+                <div class="filters">
                 <form class="bg-dark">
                     <p>Filter Search</p>
-                </form>
                 <ul class="list-group bg-dark">
                     <li class="list-group-item bg-dark">
                         <label for="date">Enter Date</label>
@@ -78,9 +77,10 @@
                         <input type="text" placeholder="circle" id="shape"/>
                     </li>
                 </ul>
+            </form>
+                </div>
             </div>
             <div class="col-md-9">
-                <div class="col-md-9">
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -104,5 +104,4 @@
     <script src="static/js/app.js"></script>
 
 </body>
-
 </html>
